make services and collect local storage operatioins

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -6,13 +6,17 @@
             
             <!-- Start First part -->
             <div class="row">
-                <div class="col-md-8"> 
+                <div class="col-md-7"> 
                     <h2 class="center-block"> Mobile Shop Apllication</h2>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-3">
                     
                     <button class="btn btn-primary center-block" type="submit" ng-click="add()">Add New Mobile</button>
+                </div>  
+                <div class="col-md-2">
+                     
+                    <button class="btn btn-primary center-block" type="submit" ng-click="clear()">clearData</button>
                 </div>  
             </div>
             <!-- End First part -->
