--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ tr th:last-child {
 }
 
 /*D3js*/
-/*.axis {
+.axis {
 	  font: 10px sans-serif;
 }
 
@@ -77,7 +77,7 @@ tr th:last-child {
 	  fill: none;
 	  stroke: #000;
 	  shape-rendering: crispEdges;
-}*/
+}
 
  
 
@@ -141,12 +141,15 @@ font-size: 30px;
 }
 
 #chart-bars-viewsforhours{
-	position: absolute;
+	/*position: absolute;*/
 	left:0;
 	margin-top: 15px;
+	
 }
 #chart-pie-viewsfortopplayer{
-	position: absolute;
+	/*position: absolute;*/
 	right: 0;
 	margin-top: 35px;
 }
+
+
