--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -15,22 +15,32 @@
         <div class="col-md-5">
             
 
-            <form class="form-horizontal">
+            <form name="myform" class="form-horizontal">
                 
                  
 
                 <div class="form-group">
                   <label for="inputModel" class="col-sm-2 control-label">Model</label>
                   <div class="col-sm-6">
-                    <input type="text" class="form-control" id="inputModel" placeholder="Samsung S6" ng-model="me.model">
+                    <input    
+                          type="text"   
+                          class="form-control" 
+                          id="inputModel" 
+                          placeholder="Samsung S6" 
+                          ng-model="me.model" 
+                          name="model" 
+                          required  >
                   </div>
+                 
+                    <span ng-show="myform.model.$error.required">Model is required.</span>
                 </div>
 
                 <div class="form-group">
                   <label for="inputManufactore" class="col-sm-2 control-label">Manufactore Year</label>
                   <div class="col-sm-6">
-                    <input type="number"    class="form-control" id="inputManufactore"  ng-model="me.manufacture_year"placeholder="2015">
+                    <input type="number"    name = "year"class="form-control" id="inputManufactore"  ng-model="me.manufacture_year"placeholder="2015" required >
                   </div>
+                  <span ng-show="myform.year.$error.required">Year is required.</span>
                 </div>
 
                 <div class="form-group">
@@ -121,9 +131,30 @@
  
      <!-- Start Buttuns -->
      <div class="row"  >
-        <div class="col-md-1 pull_right"> <button type="button" class="btn btn-primary" ng-click="save()">Save <i class="fa fa-check" aria-hidden="true"></i> </button></div>
-        <div class="col-md-1 pull_right"> <button type="button" class="btn btn-default" ng-click="back()">Back <i class="fa fa-sign-out" aria-hidden="true"></i></button></div>
+        <div class="col-md-1 pull_right"> 
+                <button 
+                type="button" 
+                class="btn btn-primary" 
+                ng-click="save()"
+                ng-disabled="myform.model.$error.required || myform.year.$error.required">
+                            Save 
+                            <i class="fa fa-check" aria-hidden="true"></i> 
+                </button>
+        </div>
         
+
+        <div class="col-md-1 pull_right"> 
+                <button 
+                type="button" 
+                class="btn btn-default" 
+                ng-click="back()">
+                            Back 
+                            <i class="fa fa-sign-out" aria-hidden="true"></i>
+                </button>
+          </div>
+        
+
+
 
      </div>
      <!-- End Buttuns -->
